--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -1,151 +1,96 @@
-<form class="clr-form clr-form-compact">
-  <h2 class="form-equipo-title">Equipos</h2>
-  <br>
-  <!--info action-->
-  <div class="alert alert-info alert-sm" *ngIf="info">
-    <div class="alert-items">
-      <div class="alert-item static">
-        <div class="alert-icon-wrapper">
-          <clr-icon class="alert-icon"
-                    shape="check-circle">
-          </clr-icon>
-        </div>
-        <span class="alert-text">
-            {{ infoMessage }}
-          </span>
-      </div>
-    </div>
-  </div>
-
-  <!-- errors -->
-  <div class="alert alert-danger alert-sm" *ngIf="error">
-    <div class="alert-items">
-      <div class="alert-item static">
-        <div class="alert-icon-wrapper">
-          <clr-icon class="alert-icon"
-                    shape="exclamation-circle">
-          </clr-icon>
-        </div>
-        <span class="alert-text">{{errorMessage}}</span>
-      </div>
-    </div>
-    <button type="button" class="close" aria-label="Close"
-            (click)="error = false">
-      <clr-icon aria-hidden="true" shape="close"></clr-icon>
-    </button>
-  </div>
-  <br>
-  <clr-datagrid [clrDgLoading]="loading">
+<h3 class="form-equipo-title">Equipos</h3>
+<form clrForm>
+  <clr-datagrid>
     <clr-dg-action-bar>
-      <div class="clr-row clr-justify-content-start clr-col-12">
-        <div class="clr-col-5">
-          <div class="form-group row flex-items-xs-left">
-            <div class="col-3">
-              <label class="form-filter-label">Tipo:</label>
-            </div>
-            <div class="col-4">
-              <div class="select form-control">
-                <select class="select-form-equipo" id="selectTipo" #selectedTipo name="selectTipo"
-                        [(ngModel)]="tipoId" (change)="onSelectedTipo(selectedTipo.value)">
-                  <option>Filtrar por Tipo</option>
-                  <option *ngFor="let tipo of tipos"
-                          value={{tipo.id}}>{{tipo.tipo}}
-                  </option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group row flex-items-xs-left">
-            <div class="col-3">
-              <label class="form-filter-label">Marca/Modelo:</label>
-            </div>
-            <div class="col-4">
-              <div class="select form-control">
-                <select class="select-form-equipo" id="selectModelo" #selectedModelo
-                        name="selectModelo" [(ngModel)]="modeloId"
-                        (change)="onSelectedMarcaModelo(selectedModelo.value)">
-                  <option>Filtrar por Marca/Modelo</option>
-                  <option *ngFor="let modelo of modelos"
-                          value={{modelo.id}}>{{modelo.marca}}/{{modelo.modelo}}
-                  </option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group row flex-items-xs-left">
-            <div class="col-3">
-              <label class="form-filter-label">Ubicación:</label>
-            </div>
-            <div class="col-4">
-              <div class="select form-control">
-                <select class="select-form-equipo" id="selectUbi" #selectedUbi name="selectUbi"
-                        [(ngModel)]="ubicacionId"
-                        (change)="onSelectedUbicacion(selectedUbi.value)">
-                  <option>Filtrar por Ubicacion</option>
-                  <option *ngFor="let ubicacion of ubicaciones"
-                          value={{ubicacion.id}}>{{ubicacion.servicio}}
-                  </option>
-                </select>
-              </div>
-            </div>
-          </div>
+<!--      tipo/ubicacion-->
+      <div>
+      <label class="clr-col-1 clr-align-self-end">Tipo:</label>
+      <div class="clr-select-wrapper">
+        <select class="clr-select" id="select-tipo" name="tipoId" [(ngModel)]="tipoId"
+                (ngModelChange)="onSelectTipo()">
+          <option>Filtrar por Tipo</option>
+          <option *ngFor="let tipo of tipos"
+                  value={{tipo.id}}>{{tipo.tipo}}
+          </option>
+        </select>
+      </div>
+
+      <label class="clr-col-1 clr-align-self-end">Ubicacion:</label>
+      <div class="clr-select-wrapper">
+        <select class="clr-select" id="select-ubi" name="selectUbi"
+                [(ngModel)]="ubicacionId"
+                (change)="onSelectUbicacion()">
+          <option>Filtrar por Ubicacion</option>
+          <option *ngFor="let ubicacion of ubicaciones"
+                  value={{ubicacion.id}}>{{ubicacion.servicio}}
+          </option>
+        </select>
+      </div>
+      </div>
+      <br/>
+<!--      marca/modelo-->
+      <div>
+        <label class="clr-col-1 clr-align-self-end">Marca:</label>
+        <div class="clr-select-wrapper">
+          <select class="clr-select" id="select-marca" name="marcaId" [(ngModel)]="marcaId"
+                  (ngModelChange)="onSelectMarca()">
+            <option>Filtrar por Marca</option>
+            <option *ngFor="let marca of marcas"
+                    value={{marca.id}}>{{marca.marca}}
+            </option>
+          </select>
         </div>
-        <div class="clr-col-5">
-          <div class="form-group row flex-items-xs-left">
-            <div class="col-3">
-              <label class="form-filter-label">Estado Equipo:</label>
-            </div>
-            <div class="col-4">
-              <div class="select form-control">
-                <select class="select-form-equipo" id="estadoEquipo" #selectedEstadoEquipo
-                        name="estadoEquipo" [(ngModel)]="estadoEquipo"
-                        (change)="onSelectedEstado(selectedEstadoEquipo.value)">
-                  <option disabled>Filtrar por Estado Equipo</option>
-                  <option>Operativo</option>
-                  <option>Inoperativo</option>
-                  <option>Irreparable</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group row flex-items-xs-left">
-            <div class="col-4">
-              <label class="form-filter-label">Estado Contrato:</label>
-            </div>
-            <div class="col-4">
-              <div class="select form-control">
-                <select class="select-form-equipo" id="estadoContrato" #selectEstadoContrato name="estadoContrato"
-                        [(ngModel)]="estadoContrato"
-                        (change)="onSelectedEstadoContrado(selectEstadoContrato.value)">
-                  <option>Filtrar por Estado Contrato</option>
-                  <option *ngFor="let estado of estadosContrato"
-                          value={{estado.nombre}}>{{estado.nombre}}
-                  </option>
-                </select>
-              </div>
-            </div>
-          </div>
+
+        <label class="clr-col-1 clr-align-self-end">Modelo:</label>
+        <div class="clr-select-wrapper">
+          <select class="clr-select" id="select-modelo" name="modeloId" [(ngModel)]="modeloId"
+                  (ngModelChange)="onSelectModelo()">
+            <option>Filtrar por Modelo</option>
+            <option *ngFor="let modelo of modelos"
+                    value={{modelo.id}}>{{modelo.modelo}}
+            </option>
+          </select>
         </div>
-        <div class="clr-col-2">
-          <a class="btn btn-sm btn-primary" (click)="filtrarEquipo()">
-            <clr-icon shape="search"></clr-icon>
-          </a>
+      </div>
+      <br/>
+<!--      estados-->
+      <div>
+        <label class="clr-col-1 clr-align-self-end">Estado Equipo:</label>
+        <div class="clr-select-wrapper">
+          <select class="clr-select" id="select-estado-equipo" name="estado" [(ngModel)]="estadoEquipo"
+                  (ngModelChange)="onSelectEstado()">>
+            <option>Filtrar por Estado Equipo</option>
+            <option value="Operativo">Operativo</option>
+            <option value="Inoperativo">Inoperativo</option>
+            <option value="Irreparable">Irreparable</option>
+          </select>
         </div>
-        <div class="clr-col-12">
-          <div class="clr-form-control clr-row">
-            <a class="btn btn-sm btn-success"
-               (click)="addEquipo()">
-              <clr-icon shape="plus"></clr-icon>
-              Crear
-            </a>
-            <a class="btn btn-sm btn-success"
-               *ngIf="selectedEquipo != null"
-               (click)="editEquipo()">
-              <clr-icon shape="pencil"></clr-icon>
-              Editar
-            </a>
-          </div>
+
+        <label class="clr-col-1 clr-align-self-end">Estado Contrato:</label>
+        <div class="clr-select-wrapper">
+          <select class="clr-select" id="select-estado-contrato" name="estadoContrato"
+                  [(ngModel)]="estadoContrato"
+                  (change)="onSelectEstadoContrado()">
+            <option>Filtrar por Estado Contrato</option>
+            <option *ngFor="let estado of estadosContrato"
+                    value={{estado.nombre}}>{{estado.nombre}}
+            </option>
+          </select>
         </div>
+        <a class="btn btn-sm btn-primary filtro-btn " (click)="filtrarEquipo()">
+          <clr-icon shape="search"></clr-icon>
+        </a>
+      </div>
+      <br/>
+      <div class="btn-group">
+        <button type="button" class="btn btn-sm btn-primary" (click)="addEquipo()">
+          <clr-icon shape="plus"></clr-icon> Crear
+        </button>
+        <button type="button" class="btn btn-sm btn-success" *ngIf="selectedEquipo != null"
+                (click)="editEquipo()">
+          <clr-icon shape="pencil"></clr-icon> Editar</button>
+        <button type="button" class="btn btn-sm btn-secondary" *ngIf="equipos.length > 0">
+          <clr-icon shape="pencil"></clr-icon> Export</button>
       </div>
     </clr-dg-action-bar>
     <clr-dg-column class="table-header">Tipo</clr-dg-column>
@@ -160,8 +105,8 @@
     <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
                 [class.selectEquipo]="equipo === selectedEquipo">
       <clr-dg-cell class="table-column">{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.modeloEquipo?.marca}}</clr-dg-cell>
-      <clr-dg-cell class="table-column">{{equipo.modeloEquipo?.modelo}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.marca?.marca}}</clr-dg-cell>
+      <clr-dg-cell class="table-column">{{equipo.modelo?.modelo}}</clr-dg-cell>
       <clr-dg-cell class="table-column">{{equipo.numeroSerie}}</clr-dg-cell>
       <clr-dg-cell class="table-column">{{equipo.numeroPatrimonial}}</clr-dg-cell>
       <clr-dg-cell class="table-column">{{equipo.ubicacion?.bloque}},
@@ -169,10 +114,11 @@
       <clr-dg-cell class="table-column">{{equipo.estado}}</clr-dg-cell>
       <clr-dg-cell class="table-column">{{equipo.contrato?.estadoContrato}}</clr-dg-cell>
     </clr-dg-row>
-
     <clr-dg-footer>
-      {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} de {{total}} Equipos
-      <clr-dg-pagination #pagination [clrDgPageSize]="5" [clrDgTotalItems]="total"></clr-dg-pagination>
+      <clr-dg-pagination #pagination [clrDgPageSize]="10">
+        <clr-dg-page-size [clrPageSizeOptions]="[10,20,50,100]">Equipos por pag</clr-dg-page-size>
+        {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} de {{total}} Equipos
+      </clr-dg-pagination>
     </clr-dg-footer>
   </clr-datagrid>
 </form>
