--- a/client-app/src/app/shared/representante/representante.component.css
+++ b/client-app/src/app/shared/representante/representante.component.css
@@ -12,3 +12,11 @@
 .col-label-representante {
   text-align: right !important;
 }
+
+.tamanho-total {
+  width: 100% !important;
+}
+
+.tamanho-medio{
+  width: 50% !important;
+}
