--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.css
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.css
@@ -8,29 +8,13 @@
   text-align: left;
 }
 
-.selectEquipo {
-  background-color: darkgrey !important;
-  cursor: pointer !important;
-}
-
 pre {
   border: 0 solid #ccc !important;
   font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif !important;
 }
 
-.select .select-form-equipo {
-  border: 1px solid rgba(34, 36, 38, 0.50) !important;
-  border-radius: 0 !important;
-  border-image: initial !important;
-  -webkit-appearance: menulist !important;
-  align-items: center !important;
-  background-color: white !important;
-  cursor: default;
-  background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
-  height: 30px !important;
-  margin-left: 1% !important;
-  width: 100% !important;
-  display: block;
+.filtro-btn {
+  margin-left: 2% !important;
 }
 
 .table-header {
